# coder-benchmark

./: .eslintrc.cjs  .gitignore  README.md  bench-max.sh  eslint.config.mjs  models-all.json  models.json  package-lock.json  package.json  results.json  vitest.config.ts
.github/workflows/: ci.yml
base-template/: package-lock.json  package.json
coverage/: index.html  index.ts.html  metrics.ts.html  modelClient.ts.html  pullModels.ts.html  scenarioLoader.ts.html  summarizer.ts.html  workspace.ts.html
models/: embedding.json  general.json  huge.json  large.json  math.json  medium.json  small.json  tiny.json  vision.json
scenarios/: ts-lru-cache.json
scenarios/bash/: sh-log-rotator.json
scenarios/cpp/: cpp-binary-parser.json  cpp-concurrent-queue.json
scenarios/csharp/: cs-binary-parser.json  cs-concurrent-queue.json  cs-lru-cache.json
scenarios/go/: go-binary-parser.json  go-concurrent-queue.json  go-lru-cache.json
scenarios/haskell/: hs-binary-parser.json  hs-concurrent-queue.json  hs-lru-cache.json
scenarios/html/: html-semantic-page.json
scenarios/java/: java-binary-parser.json  java-concurrent-queue.json  java-lru-cache.json
scenarios/ocaml/: ml-binary-parser.json  ml-concurrent-queue.json  ml-lru-cache.json
scenarios/php/: php-binary-parser.json  php-concurrent-queue.json  php-lru-cache.json
scenarios/rust/rs-lru-cache/template/: Cargo.toml
scenarios/rust/rs-lru-cache/template/src/: lib.rs
scenarios/rust/rs-lru-cache/template/tests/: test_lru.rs
scripts/: bench-max.ts
src/cli/: index.ts
tests/: metrics.test.ts  runner.test.ts
(+119 files in other folders)
